# code

./: .env  .gitignore  AQR_MULTIFACTOR_PROJECT_PLAN.md  AUTOMATED_WORKFLOW_README.md  BACKTEST_FAILURE_ANALYSIS.md  CLEAN_PROJECT_STRUCTURE.md  CVXPY_CALIBRATION_RESULTS.md  DIRECTORY_ASSESSMENT.md  ETFTrader.code-workspace  ETF_UNIVERSE_EXPANSION_SUMMARY.md  FACTOR_EFFICACY_RESULTS.md  FINAL_DEPLOYMENT.md  GRID_SEARCH_README.md  JUPYTER_SETUP.md  MOMENTUM_ITERATION_GUIDE.md  OPERATIONS_MANUAL.md  PHASE2_SUMMARY.md  PHASE3_PORTFOLIO_OPTIMIZATION.md  PHASE4_OPTIMIZATION_ENHANCEMENTS.md  PROGRESS_WEEK1.md  PROJECT_STATUS.md  README.md  REAL_DATA_VALIDATION_SUMMARY.md  SIGNAL_EXPLORATION_READY.md  STOCK_PICKING_STRATEGIES_RESEARCH.md  SUMMARY_ITERATION_SYSTEM.md  VSCODE_SETUP.md  WEBAPP_PLAN.md  WEBAPP_SETUP.md  WEEK8_QUICKSTART.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  start_jupyter.sh
.claude/: settings.local.json
Plan/: INSTRUCTIONS.md  PROGRESS_LOG.md  PROJECT_PLAN.md
backend/: .env  .env.example  Dockerfile  README.md  alembic.ini  requirements.txt
config/: signal_config_examples.json
data/: factor_scores_20251010_200559.parquet  factor_scores_latest.parquet
docs/: CVXPY_OPTIMIZERS_AXIOMA.md  INTERACTIVE_BROKERS_INTEGRATION.md  LEVERAGED_STRATEGY_DOCUMENT.tex  TECHNICAL_INVESTMENT_DOCUMENT.aux  TECHNICAL_INVESTMENT_DOCUMENT.out  TECHNICAL_INVESTMENT_DOCUMENT.tex  TECHNICAL_INVESTMENT_DOCUMENT.toc  WEB_APP_ARCHITECTURE.md  WEEK8_PROGRESS.md
frontend/: package-lock.json  package.json
notebooks/: 00_etf_universe_collection.ipynb  (+11 more)
(+3435 files in other folders)
